name:                AoC2021
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MarcusVoelker/AoC2021#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          voelker@embedded.rwth-aachen.de
copyright:           2021 Marcus Völker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day1
  hs-source-dirs:      src
  other-modules:       Harness
  main-is:             Day1/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lens, parsec

executable Day2
  hs-source-dirs:      src
  other-modules:       Harness
  main-is:             Day2/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lens, parsec

executable Day3
  hs-source-dirs:      src
  other-modules:       Harness
  main-is:             Day3/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lens, parsec