name:                AoC2021
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MarcusVoelker/AoC2021#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          voelker@embedded.rwth-aachen.de
copyright:           2021 Marcus Völker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AoC
  hs-source-dirs:      src
  other-modules:       Harness, Day1.Main, Day2.Main, Day3.Main, Day4.Main, Day5.Main, Day6.Main, Day7.Main, Day8.Main, Day9.Main, Day10.Main
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lens, parsec, containers, transformers, mtl
  default-extensions:  TupleSections, TemplateHaskell, FunctionalDependencies